--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.2.1",
+    "babel-eslint": "^8.2.1",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
     "chai": "^3.5.0",
     "chai-jquery": "^2.0.0",
+    "eslint": "^4.17.0",
     "jquery": "^2.2.1",
     "jsdom": "^8.1.0",
     "mocha": "^2.4.5",
